[REFACTOR] changed test to mock repository in unit test